--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,11 +60,12 @@ header .overlay nav .navbar-collapse ul .nav-item:hover{
         font-size: 1.2rem !important;
     }
     button{
-        font-size: .4rem !important;
-        padding: 5px 8px !important;
+        font-size: .5rem !important;
+        /* padding: 5px 8px !important; */
+        width: 100% !important;
     }
     header{
-        height: 50vh;
+        height: 40vh;
     }
    
 }
