--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,8 +69,7 @@ header .overlay_hero .navbar {
     z-index: 40;
 }
 .navbar-toggler{
-    z-index: 50;
-    position: relative;
+
     margin-left: 80px;
     transform: translateX(-30px);
 }
@@ -399,8 +398,9 @@ footer p{
     }
 
     header .overlay_hero nav .navbar-collapse ul {
-        background-color: rgba(0, 0, 0, 0.656);
+        background-color: rgba(0, 0, 0, 0.53);
         padding-left: 20px;
+     
     }
     .carousel {
         height: 80vh !important;
@@ -529,6 +529,10 @@ footer p{
 
     .carousel {
         height: 40vh !important;
+    }
+    .carousel-control-prev,.carousel-control-next{
+        z-index: 10;
+        display: none;
     }
 
     .reviewsDetails {
