--- a/CSS/style.css
+++ b/CSS/style.css
@@ -487,7 +487,8 @@ footer .icons div:hover {
 
     header .overlay_hero nav .navbar-collapse ul {
         background-color: rgba(0, 0, 0, 0.893);
-        padding: 20px;
+        padding-left: 20px;
+        z-index: 50000;
     }
 
     .carousel {
