--- a/CSS/style.css
+++ b/CSS/style.css
@@ -74,21 +74,25 @@ a {
 
 .carousel .carousel-inner .carouselContent {
     position: absolute !important;
-    left: 50%;
+    bottom: 35%;
     transform: translateX(-50%);
-    top: 55%;
+    left: 50%;
     z-index: 500 !important;
     background-color: rgba(128, 128, 128, 0.568);
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
-
+    text-align: center;
+   
+    
 }
-
+.carousel .carousel-inner .carouselContent button{
+   
+}
 .carousel .carousel-inner .carouselContent p {
     margin: 0;
     color: #fff;
     font-weight: bold;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 header .overlay_hero .navbar {
@@ -642,9 +646,12 @@ footer .icons div:hover {
         top: 90%;
         padding: 7px;
         border-radius: 5px;
-        width: 90%;
+        /* width: 90%; */
     }
-
+    .carousel .carousel-inner .carouselContent button{
+        font-size: 12px;
+        
+    }
     .carousel .carousel-inner .carouselContent p {
         margin: 0;
         color: #fff;
